syntax = "proto3";
package epaxospb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Span represents a span of Keys that a Command operates on.
message Span {
    option (gogoproto.goproto_stringer) = false;

    // The key for request. If the request operates on a range, this
    // represents the starting key for the range.
    bytes key = 1 [(gogoproto.casttype) = "Key"];

    // The end key is empty if the request spans only a single key. Otherwise,
    // it must order strictly after Key. In such a case, the header indicates
    // that the operation takes place on the key range from Key to EndKey,
    // including Key and excluding EndKey.
    bytes end_key = 2 [(gogoproto.casttype) = "Key"];
}

message Command {
    option (gogoproto.goproto_stringer) = false;

    uint64 id    = 1 [(gogoproto.customname) = "ID"];
    Span span    = 2 [(gogoproto.nullable) = false];
    bool writing = 3;
    bytes data   = 4;
}

// message Request {
//     Command command = 1;
// }

// message RequestReply {

// }

// message Prepare {

// }

message InstanceID {
    uint64 replica_id   = 1 [(gogoproto.customname) = "ReplicaID", 
                             (gogoproto.casttype) = "ReplicaID"];
    uint64 instance_num = 2 [(gogoproto.casttype) = "InstanceNum"];
}

message InstanceData {
    Command command = 1;
    uint64  seq_num = 2 [(gogoproto.casttype) = "SeqNum"];
    repeated InstanceID deps = 3 [(gogoproto.nullable) = false];
}

message PreAccept {
    InstanceData data = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

// PreAcceptOK is used to respond to a PreAccept message is cases where the
// remote replica has no new information about the proposed command.
message PreAcceptOK {}

// PreAcceptReply is used to respond to a PreAccept message in cases whe the
// remote replica has new information about the proposed command. This new
// information may either be a larger sequence number or extra dependencies.
message PreAcceptReply {
    uint64 updated_seq_num = 1 [(gogoproto.casttype) = "SeqNum"];
    repeated InstanceID updated_deps = 2 [(gogoproto.nullable) = false];
}

message Accept {
    InstanceData data = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

message AcceptOK {}

message Commit {
    InstanceData data = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

// Ballot is a ballot number that ensures message freshness.
message Ballot {
   uint64 epoch  = 1;
   uint64 number = 2;
   uint64 replica_id = 3 [(gogoproto.customname) = "ReplicaID",
                          (gogoproto.casttype) = "ReplicaID"];
}

message Message {
    // to is the destination of the message.
    uint64 to = 1 [(gogoproto.casttype) = "ReplicaID"];
    // ballot is the message's ballot number.
    Ballot ballot = 2 [(gogoproto.nullable) = false];
    // instance_meta holds information of the message's corresponding instance.
    InstanceID instance_id = 3 [(gogoproto.nullable) = false,
                                (gogoproto.customname) = "InstanceID"];
    // type is a union of different message types.
    oneof type {
        PreAccept      pre_accept       = 4;
        PreAcceptOK    pre_accept_ok    = 5;
        PreAcceptReply pre_accept_reply = 6;
        Accept         accept           = 7;
        AcceptOK       accept_ok        = 8;
        Commit         commit           = 9;
    }
}

message InstanceState {
    InstanceID meta = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];

    enum Status {
        None = 0;
        PreAccepted = 1;
        Accepted = 2;
        Committed = 3;
        Executed = 4;
    }
    Status status = 2;

    InstanceData data = 3 [(gogoproto.nullable) = false, (gogoproto.embed) = true];

    Ballot ballot = 4;
}

message HardState {
    // replica_id is the unique identifier for this node.
    uint64 replica_id = 1 [(gogoproto.customname) = "ReplicaID",
                           (gogoproto.casttype) = "ReplicaID"];

    // nodes is the set of all nodes in the EPaxos network.
    repeated uint64 nodes = 2 [(gogoproto.casttype) = "ReplicaID"];

    // TODO reintroduce instance space truncation.
    // truncated_instance_nums is a mapping from ReplicaID to the current
    // InstanceNum truncation index.
    // map<uint64, uint64> truncated_instance_nums = 3 [(gogoproto.castkey) = "ReplicaID",
    //                                                 (gogoproto.castvalue) = "InstanceNum"];
    // truncated_seq_num is the largest sequence number that has been
    // truncated on this node.
    // uint64 truncated_seq_num = 4 [(gogoproto.casttype) = "SeqNum"];
}
